front: scenario: correct timetable collapse for simulation with sticky bar

--- a/front/src/styles/scss/applications/operationalStudies/_simulationresults.scss
+++ b/front/src/styles/scss/applications/operationalStudies/_simulationresults.scss
@@ -45,6 +45,9 @@ select.sm {
     .btn {
       border-radius: 4px !important;
     }
+    &.with-collapsed-timetable {
+      top: 3rem;
+    }
   }
 
   .osrd-simulation-container {
