--- a/front/src/styles/scss/common/components/_pathfinding.scss
+++ b/front/src/styles/scss/common/components/_pathfinding.scss
@@ -8,7 +8,7 @@
       transition: 0.2s;
       border-radius: 4px;
       &:hover {
-        background-color: #f2f2f2;
+        background-color: var(--coolgray1);
       }
       cursor: pointer;
     }
@@ -25,7 +25,7 @@
       width: 1rem;
       height: 2.5rem;
       content: '';
-      background-color: #fff;
+      background-color: var(--white);
     }
 
     &.via {
